work on navmenuu

--- a/example/Enter.Dashboard/Shared/DocumentLayout.razor
+++ b/example/Enter.Dashboard/Shared/DocumentLayout.razor
@@ -19,6 +19,10 @@
                             <EntNavMenuTextItem class="bg-light" Icon="fa-light fa-clock" Text="TreeView" Click="@(() => Navigate("/documents/treeview"))"/>
                             <EntNavMenuTextItem class="bg-light" Icon="fa-light fa-clock" Text="NavMenu" Click="@(() => Navigate("/documents/navmenu"))"/>
                         </EntNavMenuGroup>
+                    <EntNavMenuGroup Title="Api" Icon="fa-light fa-home">
+                        <EntNavMenuTextItem class="bg-light" Icon="fa-light fa-clock" Text="Components" Click="@(() => Navigate("/documents/"))" />
+                    
+                    </EntNavMenuGroup>
                     </EntNavMenu>
                 </EntDrawer>
                 <EntDrawer 
