--- a/example/Enter.Dashboard/Pages/Documents/TreeViewPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/TreeViewPage.razor
@@ -1,6 +1,10 @@
 ﻿@page "/documents/treeview"
 @using Enter.UI.Abstractions.Components.TreeView
 @using Enter.UI.Abstractions.Components.Button
+@using Enter.UI.Abstractions.Core.Extensions
+@using System.Net.Mime
+@using Enter.Dashboard.Model
+@using Enter.UI.Abstractions.Core
 @layout DocumentLayout
 <div class="p-4">
 
@@ -11,12 +15,14 @@
                 class="mb-4"
                 MultiSelect="false"
                 SelectMode="EntTreeViewSelectMode.Toggle"
-                DataSource="@Constants.Roles"
+                DataSource="@Datasource"
                 @bind-SelectedValue="TreeSelectedValue"/>
 
            @if (TreeSelectedValue != null)
            {
-               <EntButton Size="ButtonSize.Small" class="">
+               <EntButton Size="ButtonSize.Small" class="" @onclick="@(()=>{
+                   TreeSelectedValue = "Normal Backend Developer";
+               })">
                    @TreeSelectedValue
                </EntButton>
            }
@@ -29,7 +35,7 @@
             <EntTreeView
                 class="mb-4"
                 MultiSelect="true"
-                DataSource="Constants.Roles"
+                DataSource="@Datasource"
                 @bind-SelectedValues="TreeSelectedValues"/>
             <EntFlex Gap="1">
                 @foreach (var item in TreeSelectedValues)
@@ -45,6 +51,9 @@
 </div>
 
 @code {
-    public List<string> TreeSelectedValues { get; set; } = new() { "Admin" };
-    public string TreeSelectedValue { get; set; } = "Junior Developer";
+
+    public IEnumerable<EntSelectItem<string>> Datasource =  Constants.Roles.ProjectToSelectItem(x => x.Text, x => x.Value, x => x.Childrens, "fa-light fa-folder");
+    
+    public List<string> TreeSelectedValues { get; set; } = new() { "Admin", "Normal Backend Developer" };
+    public string TreeSelectedValue { get; set; } = "Normal Front Developer";
 }
