--- a/src/Enter.UI/Components/AppBar/EntAppBar.razor
+++ b/src/Enter.UI/Components/AppBar/EntAppBar.razor
@@ -1,9 +1,10 @@
-﻿@inherits EntComponentBase
+﻿@using Enter.UI.Abstractions.Components.Icon
+@inherits EntComponentBase
 @namespace Enter.UI.Components
 <div @attributes="@AdditionalAttributes" class="@cssClass">
     @if (ShowToggle)
     {
-        <EntIcon Click="ToggleClick" class="ent-app-bar-toggle cursor-pointer" Type="EntIconType.IconTag" Icon="fa-light fa-bars"/>
+        <EntIcon Click="ToggleClick" class="ent-app-bar-toggle cursor-pointer" Type="EntIconType.IconTag" Icon="EntIconName.Bars"/>
     }
     <b class="ent-app-bar-title">@Title</b>
     <div class="ent-app-bar-content">@ChildContent</div>
