--- a/src/Enter.UI/Styles/components/_components.scss
+++ b/src/Enter.UI/Styles/components/_components.scss
@@ -4,6 +4,7 @@
 @import "ent_toolbar.component";
 @import "ent_app_bar.component";
 @import "ent_card.component";
+@import "ent_icon.component";
 @import "ent_form.component";
 @import "ent_expandable.component";
 @import "ent_modal.component";
@@ -15,3 +16,4 @@
 @import "ent_treeview.component";
 @import "ent_toast.component";
 @import "ent_drawer.component";
+@import "ent_pagination.component";
