--- a/example/Enter.Dashboard/Components/FormLayout.razor
+++ b/example/Enter.Dashboard/Components/FormLayout.razor
@@ -1,12 +1,13 @@
 ﻿@using System.ComponentModel.DataAnnotations
 @using Enter.Dashboard.Model;
 @using Enter.UI.Abstractions.Components.Button
+@using Enter.UI.Abstractions.Components.Icon
 @using Enter.UI.Abstractions.Components.Inputs
 @using Enter.UI.Core
 <EntToolbar>
-    <EntToolbarItem Text="Add New" Icon="fa-light fa-add"/>
-    <EntToolbarItem Text="Delete Selected" Icon="fa-light fa-trash"/>
-    <EntToolbarItem Icon="fa-light fa-user"/>
+    <EntToolbarItem Text="Add New" Icon="EntIconName.Add"/>
+    <EntToolbarItem Text="Delete Selected" Icon="EntIconName.Delete"/>
+    <EntToolbarItem Icon="EntIconName.User"/>
     <EntToolbarItem Text="Details"/>
 </EntToolbar>
 <EntCard Expandable="true" class="m-4" Title="Form Layout">
@@ -15,7 +16,7 @@
             <DataAnnotationsValidator />
             <div class="row">
                 <EntInputGroup For="()=>Input.Id" Label="شناسه" class="tablet:col-1/3 mb-4 ">
-                    <EntInputText Size="EntInputSize.Large"  @bind-Value="Input.Id" Icon="@EntIcons.ChevronLeft" />
+                    <EntInputText Size="EntInputSize.Large"  @bind-Value="Input.Id" Icon="@EntIconName.ChevronLeft" />
                 </EntInputGroup>
                  <EntInputGroup For="()=>Input.User" Label="نام" class="tablet:col-1/3 mb-4">
                   
@@ -25,7 +26,7 @@
                                           ValueFunc="x=>x.Name"
                                           TextFunc="x=>x.Name"
                                           DataSources="DataSource"
-                                          Icon="@EntIcons.Search"
+                                          Icon="@EntIconName.Search"
                                           OnSearchChange="OnLastNameSearchChange"/>
                   
                 </EntInputGroup>
