--- a/src/Enter.UI/Components/Buttons/EntButton.razor
+++ b/src/Enter.UI/Components/Buttons/EntButton.razor
@@ -1,10 +1,11 @@
 ﻿@namespace Enter.UI.Components
 @using Enter.UI.Abstractions.Components.Button
+@using Enter.UI.Abstractions.Components.Icon
 @inherits EntComponentBase
 <button @attributes="@AdditionalAttributes" class="@RootClass">
     @if (Icon != null && !Loading)
     {
-        <EntIcon Size="4" Icon="@Icon"/>
+        <EntIcon Icon="@Icon" IconSize="EntIconNameize.Default" IconStyle="EntIconNametyle.Light"/>
     }
     @if (Loading)
     {
@@ -44,7 +45,7 @@
     public ButtonColor Color { get; set; } = ButtonColor.Primary;
 
     [Parameter]
-    public string? Icon { get; set; }
+    public object? Icon { get; set; }
 
     [Parameter]
     public bool Loading { get; set; } = false;
