--- a/src/Enter.UI/Components/Inputs/EntInputFile.razor
+++ b/src/Enter.UI/Components/Inputs/EntInputFile.razor
@@ -1,5 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @using System.Diagnostics.CodeAnalysis
+@using Enter.UI.Abstractions.Components.Icon
 @inherits EntInputBase<string?>
 @implements IAsyncDisposable
 
@@ -11,7 +12,7 @@
     @if (Icon != null)
     {
         <div class="ent-input-icon">
-            <EntIcon Size="4" Icon="@Icon" />
+            <EntIcon IconSize="EntIconNameize.Default" Icon="@Icon" />
         </div>
     }
 </div>
@@ -25,7 +26,7 @@
         .Build();
 
     [Parameter]
-    public string Icon { get; set; }
+    public object Icon { get; set; }
 
     [Parameter]
     public bool IsPassword { get; set; } = false;
