--- a/src/Enter.UI/Components/NavMenu/EntNavMenuGroup.razor
+++ b/src/Enter.UI/Components/NavMenu/EntNavMenuGroup.razor
@@ -1,4 +1,5 @@
 ﻿@namespace Enter.UI.Components
+@using Enter.UI.Abstractions.Components.Icon
 @inherits EntComponentBase
 <div @attributes="AdditionalAttributes" class="@RootCss" >
     <div class="ent-nav-menu-group-item" @onclick="@ToggleItem">
@@ -7,7 +8,7 @@
             <EntIcon class="ent-nav-menu-group-item-icon"  Icon="@Icon"/>
         }
         <span class="ent-nav-menu-group-item-title">@Title</span>
-        <EntIcon class="ent-nav-menu-group-item-arrow-icon"  Icon="@EntIcons.ChevronDown"/>
+        <EntIcon class="ent-nav-menu-group-item-arrow-icon"  Icon="@EntIconName.ChevronDown"/>
     </div>
 
     <EntExpandable @bind-Expanded="IsShow" class="@ContainerCss">@ChildContent</EntExpandable>
