--- a/example/Enter.Dashboard/Pages/Index.razor
+++ b/example/Enter.Dashboard/Pages/Index.razor
@@ -8,7 +8,7 @@
 @using Enter.UI.Abstractions.Components.Toast
 @using Enter.UI.Abstractions.Components.TreeView
 @using Enter.UI.Abstractions.Services
-@layout MainLayout
+@* @layout MainLayout *@
 <PageTitle>Index</PageTitle>
 
 <EntFlex class="h-full" Direction="FlexDirection.Column">
