--- a/Source/Enter.UI/Components/Buttons/EntButton.razor
+++ b/Source/Enter.UI/Components/Buttons/EntButton.razor
@@ -5,7 +5,7 @@
 <button @attributes="@AdditionalAttributes" class="@RootClass">
     @if (Icon != null && !Loading)
     {
-        <EntIcon Icon="@Icon" IconSize="EntIconNameize.Default" IconStyle="EntIconNametyle.Light"/>
+        <EntIcon Icon="@Icon" IconSize="EntIconNameize.Default" IconStyle="EntIconStyle.Light"/>
     }
     @if (Loading)
     {
