--- a/example/Enter.Dashboard/Shared/DocumentLayout.razor
+++ b/example/Enter.Dashboard/Shared/DocumentLayout.razor
@@ -19,7 +19,7 @@
                         <EntNavMenuGroup Title="Components" Icon="EntIconName.Home">
                             <EntNavMenuTextItem class="bg-light" Icon="EntIconName.Clock" Text="TreeView" Click="@(() => Navigate("/documents/treeview"))"/>
                             <EntNavMenuTextItem class="bg-light" Icon="EntIconName.List" Text="NavMenu" Click="@(() => Navigate("/documents/navmenu"))"/>
-                            <EntNavMenuTextItem class="bg-light" Icon="EntIconName.Tablet" Text="Table" Click="@(() => Navigate("/documents/datatable"))"/>
+                            <EntNavMenuTextItem class="bg-light" Icon="EntIconName.Table" Text="Table" Click="@(() => Navigate("/documents/datatable"))"/>
                             <EntNavMenuTextItem class="bg-light" Icon="EntIconName.Bars" Text="Pagination" Click="@(() => Navigate("/documents/pagination"))"/>
                         </EntNavMenuGroup>
                     <EntNavMenuGroup Title="Api" Icon="EntIconName.Home">
